# 476Lab1

./: CMakeLists.txt  README.md  sources.txt
source/: GLIncludes.h  GLSL.h  GameObject.cpp  GameObject.h  GameObjectSimplePhysics.cpp  GameObjectSimplePhysics.h  ObjectRenderer.cpp  ObjectRenderer.h  camera.cpp  camera.h  main.cpp
source/shaders/: frag.glsl  vert.glsl
